css/style.css
/*Remove default browser settings*/
* {
    margin: 0;
    padding: 0;
    border:0;
    outline: 0;
    text-decoration: none;
    list-style-type: none;
    box-sizing: border-box;
}

:root{
    --color-primary: #6c36ff;
    --color-sucess: #00bf8e;
    --color-warning: #f7c94b;
    --color-danger: #f75842;
    --color-danger-variant: rgba(247, 88, 66, 0.4);
    --color-white:#fff;
    --color-black:#000;
    --color-bg:#1f1e1e;
    --color-bg1:#2c2b2b;
    --color-bg2: #262628;
    --color-hover:#212121;
    --color-yellow:#fcdc17;

    --container-width-lg:80%;
    --container-width-md:88%;

    --transition: all 400ms ease;
    --container-width-sm:94%;
}

body {
    font-family: "Source Sans 3", sans-serif;
    font-weight: 500; 
    font-size: 1.18rem;
    font-style: normal;
    line-height: 1.7;
    color:var(--color-white);
    background: var(--color-bg);
}

.container{
    width: var(--container-width-lg);
    margin: 0 auto;

}

/* 1 rem = 16 px, 6*16 = 6 rem*/
section{
    padding: 6rem 0;
}

section h2{
    text-align: center;
    margin-bottom: 4rem;
}

h1, h2, h3, h4, h5{
    line-height: 1.2;
}

h1{
    font-size: 2.4rem;
}

h2{
    font-size: 2rem;
}

h3{
    font-size: 1.6rem;
    font-weight: 400;
}

h4{
    font-size: 1.2rem;
    font-weight: 400;
}

a{
    color:var(--color-white)
}

img {
    width:100%;
    display: block;
    object-fit:cover;
}

.btn{
    display: inline-block;
    background: var(--color-white);
    color:var(--color-black);
    padding: 1rem 2rem;
    border: 1px solid transparent;
    font-weight: 500;
    transition: var(--transition);
}

.btn-greyed{

    background: var(--color-bg2);
    color:var(--color-white);
    padding: 1rem 2rem;
    border: 1px solid var(--color-yellow);
    font-weight: 500;
    pointer-events: none;
    cursor: default;
}
.no_link{
    pointer-events: none;
    cursor: default;
}

.btn:hover{
    background-color: transparent;
    color: var(--color-yellow);
    border-color: var(--color-white);
}

.btn-primary{
    background: var(--color-yellow);
    color:var(--color-bg);
}



.logo-link {
    display: flex;
    align-items: center;
    justify-content: flex-start;
    gap: 1rem;
}
/*----NAV BAR ----*/
nav{
    background-color:transparent;
    width:100vw;
    height:5rem;
    position: fixed;
    top:0;
    z-index: 11;
}

.winodow-scroll{
    background: var(--color-bg2);
    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
}

.nav__container{
    height: 100%;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.nav_button{
    display: none;
}

.nav__menu{
    display: flex;
    align-items: center;
    gap: 4rem;
}

.nav__menu a {
    font-size: 1rem;
    transition: var(--transition);
}

.nav__menu a:hover{
    color: var(--color-yellow);
    background: var(--color-bg2);
    padding: 1rem;
}

/*Only in desktop mode*/
@media screen and (min-width: 1024px){
    .current__nav{
    color: var(--color-yellow);
    background: var(--color-bg2);
    padding: 1rem;
    }
}

/*----HEADER ----*/

header{
    position: relative;
    top:5rem;
    overflow: auto;
    height: 70vh;
    margin-bottom: 4rem;
}

.header__container{
    display: grid;
    grid-template-columns: 55% 45%;
    align-items: center;
    gap: 1rem;
    height: 100%;
    width: 80%;
}

.header__left p{
    margin: 1rem 0 2.4rem;
}

.header__right-image{
    max-width: 100%;
    max-height: 100%;
}



/*----Categories ----*/

.category__icon{
    background:var(--color-yellow) ;
    padding: 0.7rem;
    border-radius: 0.9rem;
    color: var(--color-bg1);
}

.categories{
    background-color:var(--color-bg1) ;
    height: 33rem;

}

.categories h1{
    line-height: 1;
    margin-bottom: 2rem;
}

.categories__container{
    display: grid;
    grid-template-columns:40% 60% ;
    gap:4rem;
}

.categories__left p{
    margin: 1rem 0 3rem;
}

.categories__right{
    display: grid;
    margin-right: 3rem;
    grid-template-columns: repeat(2, 1fr);
    gap: 1.1rem;
}

.category{
    background: var(--color-bg2);
    padding: 2rem;
    border-radius: 2rem;
    transition: var(--transition);
}

.category:hover{
    box-shadow: 0 3rem 3rem rgba(0, 0, 0, .3);
}

.category h5{
    margin: 2rem 0 1rem;
    font-size: 1.2rem;
}

.category p{
    font-size: 1rem;
}



/**Sponsors*/
.sponsor_section{
    position: relative;
    top:1rem;
   align-items: center;
    line-height: 2.22rem;
    overflow: hidden;
    height: auto;
 
}

.sponsor__container{
    margin-top: 1rem;
    margin-bottom: 1rem;
    height: 100%;
    
}


/*Centers this section*/
.sponsor__text {
    text-align: center;
}




.sponsor_section p {
    margin-top: 1rem;

    margin-bottom: 2rem; 
}



/*--Tablets*/
@media screen and (max-width:1024px) {
    .container{
        width:var(--container-width-md)
    }
    h1{
       font-size:2.2rem; 
    }

    h2{
        font-size:1.7rem; 
     }

    h3{
        font-size:1.3rem; 
    }
    h4{
        font-size:1.2rem; 

    }

    .nav_button{
        display:inline-block;
        background: transparent;
        font-size: 1.8rem;
        color:var(--color-white);
        cursor: pointer;
    }
    .nav_button#close-menu-btn{
        display: none;
    }

    .nav__menu{
        position: fixed;
        top: 5rem;
        right:5%;
        flex-direction: column;
        height: fit-content;
        width: 18rem;
        gap: 0;
        display: none;
    }

    .nav__menu li {
        width: 100%;
        height: 5.8rem;
    }
    
    @keyframes animatrNavItems {
        0% {
            transform: rotate(-90deg);
        }
        100% {
            transform: rotate(0);
        }
    }

    .nav__menu li a{
        background: var(--color-bg2);
        box-shadow:-4rem 6rem 10rem rgba(0, 0, 0, 0.2) ;
        width: 100%;
        height: 100%;
        display: grid;
        place-items: center;

    }

    .nav__menu li a:hover{
        color: var(--color-yellow);
    }
 

    .categories__container{
        display: grid;
        grid-template-columns:30% 70% ;
        gap:4rem;
        margin-bottom: 3rem;
    }
    .header{
        height: auto;
    }


    .header__container{
        gap:2.2rem;
        padding-bottom: 3rem;
    }

    .categories{
        height:auto;
    }

    .categories__container{
        grid-template-columns: 1fr;
       
    }

    .footer{
        height: 2rem;
    }
    .sponsor__container{
        margin-top: -5rem;
        margin-bottom: 1rem;
        height: auto;

    }

    .sponsor_section p {
        margin-top: 1.2rem;
    
        margin-bottom: 2.2rem; 
    }

    .nav__menu a:hover{
        background: var(--color-bg);

    }

    
   
}

@media screen and (max-width:600px)   {
    .container{
        width:var(--container-width-sm);
    }

    .nav__menu{
        width: 100%;

    }

    header {
        height: auto;
    }

    .header__container{
        grid-template-columns: repeat(1, 1fr);
        text-align: center;
        margin-top: 2rem; 
        gap: 2.2rem;
    }


    .categories{
        height:auto;
        margin-right: 0;
        margin-left: 0;
    }

    .sponsor_section{
        height:auto;
        margin-right: 0;
        margin-left: 0;
        margin-top: 1.2rem;

    }

    .categories__container{
        grid-template-columns: repeat(1, 1fr);
        text-align: center;
       
    }

    .categories__right{
        display: grid;
        grid-template-columns: repeat(1, 1fr);
        margin-right: 0;
        margin-left: 0;
        text-align: center;
    }

    .footer{
        background: var(--color-bg);
        height: 2rem;
    }

    .sponsor__container{
        margin-top: -6rem;
        margin-bottom: 1rem;
        grid-template-columns: repeat(1, 1fr);
        height: auto;
        text-align: center
    }

    .sponsor_section p {
        margin-top: 1.4rem;
    
        margin-bottom: 2.6rem; 
    }




}

